# Human_arm

./: Forward_kinematics.py  README.md  inverse_kinematics.py
human_gripper/: CMakeLists.txt  poopoo.xacro
human_gripper/config/: control.yaml
human_gripper/launch/: debug.launch.py  display.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py
human_gripper/meshes/: base_link.STL  forearm_link.STL  index_link1.STL  index_link2.STL  index_link3.STL  middle_link1.STL  middle_link2.STL  middle_link3.STL  palm_link.STL  pinky_link1.STL  pinky_link2.STL  pinky_link3.STL  ring_link1.STL  ring_link2.STL  ring_link3.STL  thumb_link1.STL  thumb_link2.STL  wrist_link.STL
human_gripper/src/: ArmController.py  ProportionalController.py  RPS.py  RPS_test.py
human_gripper/urdf/: human_gripper.csv  human_gripper.urdf.xacro
